<resources>
    <string name="app_name">Tegalan Resto</string>
    <string name="pilih_menu">Pilih Menu :</string>
    <string name="judul">Tegalan Food</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="identitas_pemesan">Identitas Pemesan :</string>
    <string name="edit_name">Name</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_alamat">Alamat</string>
    <string name="edit_catatan">Catatan</string>
    <string name="pilih_pesanan">Pilih Pesanan</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="detail_customer">Detail Customer :</string>
    <string name="no_meja">No.Meja :</string>
    <string name="pilih_pesanan2">Pilih Pesanan</string>


    <string-array name="meja_array">
        <item>Meja 1</item>
        <item>Meja 2</item>
        <item>Meja 3</item>
        <item>Meja 4</item>
        <item>Meja 5</item>
        <item>Meja 6</item>
        <item>Meja 7</item>
    </string-array>

    <string name="chosen">"Anda memilih: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Anda harus memilih pilihan pemesanan.</string>

    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="btn_date">Date</string>
    <string name="btn_time">Time</string>


</resources>
