<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rahmaniaaas.tegalanresto.takeway">

    <TextView
        android:id="@+id/identitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/identitas_pemesan"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/identitas"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        android:padding="15dp"    />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/edit_phone"
        android:inputType="phone"
        android:padding="15dp"    />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phone"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/edit_alamat"
        android:inputType="textPersonName"
        android:padding="15dp"    />

    <EditText
        android:id="@+id/catatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/alamat"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/edit_catatan"
        android:inputType="textLongMessage"
        android:padding="15dp"    />

           <Button
            android:id="@+id/button_date"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/catatan"
            android:layout_alignStart="@+id/catatan"
            android:layout_below="@+id/catatan"
            android:layout_marginTop="10dp"
            android:text="@string/btn_date"
               android:onClick="onDate"/>

        <Button
            android:id="@+id/button_time"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/catatan"
            android:layout_below="@+id/catatan"
            android:layout_alignRight="@+id/catatan"
            android:layout_marginTop="10dp"
            android:text="@string/btn_time"
            android:onClick="onTime"
            />

    <Button
        android:id="@+id/btnPilih1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="pilihPesanan"
        android:text="@string/pilih_pesanan"
        android:textSize="15sp" />



</RelativeLayout>
