<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rahmaniaaas.tegalanresto.dineIn">

    <TextView
        android:id="@+id/detailCust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/detail_customer"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/detailCust"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        android:padding="15dp"    />

    <TextView
        android:id="@+id/meja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name2"
        android:text="@string/no_meja"
        android:layout_marginTop="20dp"
        android:layout_marginRight="300dp"
        android:layout_marginLeft="50dp"
        android:padding="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="200dp" />

    <Spinner
        android:id="@+id/spinner_meja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/name2"
        android:layout_alignRight="@id/name2"
        android:layout_below="@id/name2"
        android:padding="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="50dp">

    </Spinner>

    <Button
        android:id="@+id/btnPilih2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/meja"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="pilihPesanan2"
        android:text="@string/pilih_pesanan2"
        android:textSize="15sp" />

</RelativeLayout>